# wiki-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cliff.toml  config.template.yaml  config.yaml.template  config.yml.template  docker-compose.yml  dotenv.template  env_template  pyproject.toml
.github/workflows/: auto-author-assign.yml  docker-build-and-publish.yml  release.yml  test-and-docker.yml
hci/: __init__.py  util.py
hci/index/: __init__.py  main.py  util.py
hci/load/: __init__.py  main.py  util.py
hci/search/: __init__.py  main.py  util.py
hci/server/: __init__.py  main.py  server.py  util.py
scripts/: generate-config.py  wr-cleanup.sh
tests/: __init__.py  test_config.py  test_index_util.py  test_util.py
tests/wiki_rag/: __init__.py  test_config.py  test_util.py
tests/wiki_rag/index/: __init__.py  test_util.py
tests/wiki_rag/load/: __init__.py  test_util.py
tests/wiki_rag/mcp_server/: __init__.py  test_auth.py
tests/wiki_rag/search/: __init__.py  test_util.py
wiki_rag/: __init__.py  config.py  config_example.py  config_update.py  schema.json  util.py
wiki_rag/cli/: __init__.py  config.py
wiki_rag/config/: __init__.py  loader.py  schema.py  updater.py
wiki_rag/config_update/: __init__.py  main.py
wiki_rag/index/: __init__.py  main.py  util.py
wiki_rag/load/: __init__.py  main.py  util.py
wiki_rag/mcp_server/: __init__.py  auth.py  main.py  server.py  util.py
wiki_rag/search/: __init__.py  main.py  util.py
wiki_rag/server/: __init__.py  main.py  server.py  util.py
wiki_rag/vector/: __init__.py  base.py  milvus.py
